--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Typing :: Typed",
 ]
-version = "0.11.7
+version = "0.11.7"
 # dynamic = ["version"]
 
 dependencies = [
